@@ -30,22 +30,49 @@
 static void MacMessageBox(errbuf);
 #endif
 
-#if !(defined(_MSDOS) || defined(_WIN32) || defined(_MACINTOSH))
+static et_old_error_hook_func com_err_hook = 0;
 
 static void default_com_err_proc
-ET_P((et_ctx ectx, void FAR *priv,
-	const char FAR *whoami, errcode_t code,
+ET_P((const char FAR *whoami, errcode_t code,
 	const char FAR *fmt, va_list ap));
 
-/* The version for Unix */
-static void default_com_err_proc(ectx, priv, whoami, code, fmt, ap)
-	et_ctx ectx;
-	void FAR *priv;
+static void default_com_err_proc(whoami, code, fmt, ap)
 	const char FAR *whoami;
 	errcode_t code;
 	const char FAR *fmt;
 	va_list ap;
 {
+#if defined(_MSDOS) || defined(_WIN32) || defined(_MACINTOSH)
+
+	char errbuf[1024] = "";
+
+	if (whoami) {
+		strcat (errbuf, whoami);
+		strcat (errbuf, ": ");
+	}
+	if (code) {
+		strcat (errbuf, error_message(code));
+		strcat (errbuf, " ");
+	}
+	if (fmt)
+		vsprintf (errbuf + strlen (errbuf), fmt, ap);
+
+#ifdef _MACINTOSH
+	MacMessageBox(errbuf);
+#else
+#ifdef _WIN32
+	if (_isatty(_fileno(stderr))) {
+	    fputs(errbuf, stderr);
+	    fputc('\r', stderr);
+	    fputc('\n', stderr);
+	    fflush(stderr);
+	} else
+#endif /* _WIN32 */
+	    MessageBox ((HWND)NULL, errbuf, "Kerberos", MB_ICONEXCLAMATION);
+#endif /* _MACINTOSH */
+
+#else /* !_MSDOS && !_WIN32 && !_MACINTOSH */
+    
 	if (whoami) {
 		fputs(whoami, stderr);
 		fputs(": ", stderr);
@@ -61,118 +88,22 @@ static void default_com_err_proc(ectx, priv, whoami, code, fmt, ap)
 	putc('\r', stderr);
 	putc('\n', stderr);
 	fflush(stderr);
+
+#endif
 }
 
-#else
-
-/*
- * For Macintosh and Windows
- */
-void KRB5_CALLCONV default_com_err_proc
-ET_P((et_ctx ectx, void FAR *priv,
-	const char FAR *whoami, errcode_t code,
-	const char FAR *fmt, va_list ap));
-
-void KRB5_CALLCONV default_com_err_proc(ectx, priv, whoami, code, fmt, ap)
-	et_ctx ectx;
-	void FAR *priv;
+KRB5_DLLIMP void KRB5_CALLCONV com_err_va(whoami, code, fmt, ap)
 	const char FAR *whoami;
 	errcode_t code;
 	const char FAR *fmt;
 	va_list ap;
 {
-	static char errbuf[1024];                   /* For those w/o stdio */
-
-	*errbuf = '\0';
-	if (whoami) {
-		strcat (errbuf, whoami);
-		strcat (errbuf, ": ");
-	}
-	if (code) {
-		strcat (errbuf, error_message(code));
-		strcat (errbuf, " ");
-	}
-	if (fmt) {
-		vsprintf (errbuf + strlen (errbuf), fmt, ap);
-	}
-#ifdef _MACINTOSH
-	MacMessageBox(errbuf);
-#else
-	/* For Windows */
-#ifdef _WIN32
-	if (_isatty(_fileno(stderr))) {
-	    fputs(errbuf, stderr);
-	    fputc('\r', stderr);
-	    fputc('\n', stderr);
-	    fflush(stderr);
-	} else
-#endif /* _WIN32 */
-	    MessageBox ((HWND)NULL, errbuf, "Kerberos", MB_ICONEXCLAMATION);
-#endif
-}
-#endif
-
-et_old_error_hook_func com_err_hook = 0;
-
-void et_com_err_va(ectx, whoami, code, fmt, ap)
-	et_ctx ectx;
-	const char FAR *whoami;
-	errcode_t code;
-	const char FAR *fmt;
-	va_list ap;
-{
-	if (ectx) {
-		if (ectx->hook_func == 0)
-			ectx->hook_func = default_com_err_proc;
-		(*ectx->hook_func)(ectx, ectx->hook_func_data, whoami,
-				   code, fmt, ap);
-	} else {
-		if (!com_err_hook)
-			default_com_err_proc(0, 0, whoami,
-					     code, fmt, ap);
-		else
-			(*com_err_hook)(whoami, code, fmt, ap);
-	}
+	if (!com_err_hook)
+		default_com_err_proc(whoami, code, fmt, ap);
+	else
+		(*com_err_hook)(whoami, code, fmt, ap);
 }
 
-#ifndef ET_VARARGS
-KRB5_DLLIMP void KRB5_CALLCONV_C et_com_err(et_ctx ectx,
-					    const char FAR *whoami,
-					    errcode_t code,
-					    const char FAR *fmt, ...)
-#else
-KRB5_DLLIMP void KRB5_CALLCONV_C et_com_err(ectx, whoami,
-					    code, fmt, va_alist)
-	et_ctx ectx;
-	const char FAR *whoami;
-	errcode_t code;
-	const char FAR *fmt;
-	va_dcl
-#endif
-{
-	va_list ap;
-
-#ifdef ET_VARARGS
-	va_start(ap);
-#else
-	va_start(ap, fmt);
-#endif
-	et_com_err_va(ectx, whoami, code, fmt, ap);
-	va_end(ap);
-}
-
-
-/*
- * The following are the old-style com_err interfaces....
- */
-KRB5_DLLIMP void KRB5_CALLCONV com_err_va(whoami, code, fmt, args)
-    const char FAR * whoami;
-    errcode_t code;
-    const char FAR * fmt;
-    va_list args;
-{
-    et_com_err_va(0, whoami, code, fmt, args);
-}
 
 #ifndef ET_VARARGS
 KRB5_DLLIMP void KRB5_CALLCONV_C com_err(const char FAR *whoami,
@@ -197,7 +128,8 @@ KRB5_DLLIMP void KRB5_CALLCONV_C com_err(whoami, code, fmt, va_alist)
 	va_end(ap);
 }
 
-KRB5_DLLIMP et_old_error_hook_func KRB5_CALLCONV set_com_err_hook (new_proc)
+#ifdef unix
+et_old_error_hook_func set_com_err_hook (new_proc)
 	et_old_error_hook_func new_proc;
 {
 	et_old_error_hook_func x = com_err_hook;
@@ -206,32 +138,14 @@ KRB5_DLLIMP et_old_error_hook_func KRB5_CALLCONV set_com_err_hook (new_proc)
 	return x;
 }
 
-KRB5_DLLIMP et_old_error_hook_func KRB5_CALLCONV reset_com_err_hook ()
+et_old_error_hook_func reset_com_err_hook ()
 {
 	et_old_error_hook_func x = com_err_hook;
     
 	com_err_hook = 0;
 	return x;
 }
-
-KRB5_DLLIMP errcode_t KRB5_CALLCONV et_set_hook(ectx, new, old)
-	et_ctx ectx;
-	struct et_hook FAR *new;
-	struct et_hook FAR *old;
-{
-	if (old) {
-		old->func = ectx->hook_func;
-		old->data = ectx->hook_func_data;
-	}
-	if (new) {
-		ectx->hook_func = new->func;
-		ectx->hook_func_data = new->data;
-	} else {
-		ectx->hook_func = 0;
-		ectx->hook_func_data = 0;
-	}
-	return 0;
-}
+#endif
 
 #ifdef _MACINTOSH
 static void MacMessageBox(errbuf)
